# laboratorio_avanzado

./: .gitignore  README.md  devenv.nix  pyproject.toml
cm_electron/: campo_magnetico.csv  campo_magnetico.py  main.tex  mediciones.csv  mediciones.py  referencias.bib
constante_plank/: fit_data.gp  fit_data.py  main.tex  plot_freq_vs_vf.gp  raw_data.txt  referencias.bib
experimento_de_rutherford/: data.csv  fit_rutherford_data.gp  fit_rutherford_data.py  graficar_conteos.py  graficar_fit.py  main.tex  raw_data.csv  referencias.bib  rutherford_data.txt
optica_fisica/: main.tex  referencias.bib
optica_geometrica/: encajar_datos.py  main.tex  referencias.bib  secciones.md
rayos_gamma/: Cs-137.csv  Eu-152.csv  calibrar_energia.py  encaje_energia.py  graficar_conteo_vs_energia.py  graficar_conteo_vs_energia_cs.py  local_maxima.csv  local_maxima_energies.csv  main.tex  referencias.bib
template/: main.tex  secciones.md
vida_media_muon/: ReadPAA-python3.py  main.tex  picos_dobles.csv  plot_histogram.py  read_paa_data.py  referencias.bib
