[tool.poetry]
name = "laboratorio"
version = "0.1.0"
description = ""
authors = ["bridleiva <fisica.cn28c@slmail.me>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.2"
matplotlib = "^3.10.0"
numpy = "^2.2.5"
pandas = "^2.2.3"
pyqt6 = "^6.9.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
